# my_sudo_hack

./: Cargo.toml  README.md
my_sudo_hack/: Cargo.toml  build.rs
my_sudo_hack-common/: Cargo.toml
my_sudo_hack-common/src/: lib.rs
my_sudo_hack-ebpf/: Cargo.toml
my_sudo_hack-ebpf/src/: main.rs
my_sudo_hack/src/: main.rs
